--- a/frontend/frontendMobile/app/pubspec.yaml
+++ b/frontend/frontendMobile/app/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   camera: ^0.11.0+1 # Thêm dòng này
   path_provider: ^2.0.0 # Cần thiết để lưu ảnh
   path: ^1.8.0 # Cần thiết để làm việc với đường dẫn file
+  http: ^1.2.1
+  # firebase_core: ^3.3.0 # Hoặc phiên bản mới hơn
+  # firebase_auth: ^5.2.0 # Hoặc phiên bản mới hơn
+  # # ...
 
 dev_dependencies:
   flutter_test:
