feat: chat-bot service with RAG

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-chat-app\groovy-student-419204-firebase-adminsdk-fbsvc-ce33385485.json
-chat-app\node_modules
+groovy-student-419204-firebase-adminsdk-fbsvc-ce33385485.json
+*.env
