add reset password but still bug

--- a/backend/services/report-service/src/models/config.json
+++ b/backend/services/report-service/src/models/config.json
@@ -1,7 +1,7 @@
 {
     "database": "project_tracker",
     "username": "root",
-    "password": "tungbu11",
+    "password": "12345678910",
     "host": "localhost",
     "dialect": "mysql"
   }
