--- a/backend/services/user-service/package.json
+++ b/backend/services/user-service/package.json
@@ -10,7 +10,8 @@
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "firebase-admin": "^13.2.0"
+        "firebase-admin": "^13.2.0",
+        "nodemailer": "^6.10.1"
     },
     "devDependencies": {
         "@types/dotenv": "^6.1.1"
