--- a/backend/services/chatbot-service/package.json
+++ b/backend/services/chatbot-service/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "uet-project-tracker-app-report-service",
+    "name": "uet-project-tracker-app-chatbot-service",
     "version": "1.0.0",
-    "description": "Package for report service",
+    "description": "Package for chatbot service",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,15 +13,12 @@
     "dependencies": {
         "@zxing/library": "^0.21.3",
         "axios": "^1.7.9",
-        "canvas": "^3.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
-        "jimp": "^1.6.0",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.13.0",
         "quagga": "^0.12.1",
-        "sequelize": "^6.37.6",
-        "sharp": "^0.34.1"
+        "sequelize": "^6.37.6"
     }
 }
