--- a/frontend/frontendMobile/app/pubspec.yaml
+++ b/frontend/frontendMobile/app/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   path_provider: ^2.0.0 # Cần thiết để lưu ảnh
   path: ^1.8.0 # Cần thiết để làm việc với đường dẫn file
   http: ^1.2.1
-  # firebase_core: ^3.3.0 # Hoặc phiên bản mới hơn
-  # firebase_auth: ^5.2.0 # Hoặc phiên bản mới hơn
+  firebase_core: ^3.7.0
+  firebase_auth: ^5.3.2
   # # ...
 
 dev_dependencies:
