--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "firebase-admin": "^13.3.0",
+    "kafkajs": "^2.2.4",
     "uuid": "^11.1.0"
   }
 }
