--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.7",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "firebase-admin": "^13.3.0",
     "kafkajs": "^2.2.4",
     "uuid": "^11.1.0"
