--- a/frontend/frontendMobile/app/pubspec.yaml
+++ b/frontend/frontendMobile/app/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   http: ^1.2.1
   firebase_core: ^3.7.0
   firebase_auth: ^5.3.2
+  socket_io_client: ^3.1.0
+  intl: ^0.20.2
+  cloud_firestore: ^5.5.0
   # # ...
 
 dev_dependencies:
