add chatbot service

--- a/chatbot-service/rag_bot/vector_database/.env
+++ b/chatbot-service/rag_bot/vector_database/.env
@@ -1,2 +1,2 @@
-QDRANT_API_KEY="your_api_key_here"
-QDRANT_CLIENT_URL="https://0bcd2862-e8a5-4f2b-b1ac-4d0ed2af07ed.us-west-1-0.aws.cloud.qdrant.io:6333"
+QDRANT_API_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.WOBOHaj-VRHF2d8K0mZl5-BPwUtmCHtW0sF-VKQ3Fpc"
+QDRANT_CLIENT_URL="https://f80acf79-f2eb-415a-ad28-c37aa5c93c2f.us-east4-0.gcp.cloud.qdrant.io"
