--- a/frontend/frontendMobile/app/pubspec.yaml
+++ b/frontend/frontendMobile/app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   socket_io_client: ^3.1.0
   intl: ^0.20.2
   cloud_firestore: ^5.5.0
+  http_parser: ^4.1.0
   # # ...
 
 dev_dependencies:
