--- a/frontend/frontendMobile/app/pubspec.yaml
+++ b/frontend/frontendMobile/app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.20.2
   cloud_firestore: ^5.5.0
   http_parser: ^4.1.0
+  flutter_secure_storage: ^9.2.4
   # # ...
 
 dev_dependencies:
