--- a/user-service/package.json
+++ b/user-service/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "axios": "^1.8.3",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
