--- a/frontend/frontendMobile/app/pubspec.yaml
+++ b/frontend/frontendMobile/app/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^5.5.0
   http_parser: ^4.1.0
   flutter_secure_storage: ^9.2.4
+  image: ^4.5.1
   # # ...
 
 dev_dependencies:
