--- a/backend/services/report-service/package.json
+++ b/backend/services/report-service/package.json
@@ -12,13 +12,17 @@
     "license": "ISC",
     "dependencies": {
         "@zxing/library": "^0.21.3",
+        "amqplib": "^0.10.8",
         "axios": "^1.7.9",
+        "canvas": "^3.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "jimp": "^1.6.0",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.13.0",
         "quagga": "^0.12.1",
-        "sequelize": "^6.37.6"
+        "sequelize": "^6.37.6",
+        "sharp": "^0.34.1"
     }
 }
