--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "firebase": "^11.7.3",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.501.0",
     "prop-types": "^15.8.1",
