--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "firebase": "^11.7.3",
+    "jwt-decode": "^4.0.0",
     "fuse.js": "^7.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.501.0",
@@ -28,6 +30,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.1.4"
