--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@reduxjs/toolkit": "^2.7.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.4",
+    "@uiw/react-markdown-preview": "^5.1.4",
+    "@uiw/react-md-editor": "^4.0.6",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "firebase": "^11.7.3",
+    "jwt-decode": "^4.0.0",
+    "fuse.js": "^7.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.501.0",
     "prop-types": "^15.8.1",
