--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "firebase": "^11.7.3",
-    "jwt-decode": "^4.0.0",
     "fuse.js": "^7.1.0",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.501.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-mentions": "^4.4.10",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
     "socket.io-client": "^4.8.1",
