Add Notification FE

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fuse.js": "^7.1.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "longest-streak": "^3.1.0",
     "lucide-react": "^0.501.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
