--- a/report-service/package.json
+++ b/report-service/package.json
@@ -4,7 +4,8 @@
     "description": "Package for report service",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node src/app.js"
     },
     "type": "commonjs",
     "keywords": [],
@@ -13,6 +14,7 @@
     "dependencies": {
         "@zxing/library": "^0.21.3",
         "amqplib": "^0.10.8",
+        "async-retry": "^1.3.3",
         "axios": "^1.7.9",
         "canvas": "^3.1.0",
         "cors": "^2.8.5",
