--- a/report-service/package.json
+++ b/report-service/package.json
@@ -4,8 +4,7 @@
     "description": "Package for report service",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node src/app.js"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "type": "commonjs",
     "keywords": [],
@@ -14,12 +13,12 @@
     "dependencies": {
         "@zxing/library": "^0.21.3",
         "amqplib": "^0.10.8",
-        "async-retry": "^1.3.3",
         "axios": "^1.7.9",
         "canvas": "^3.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "firebase-admin": "^13.4.0",
         "jimp": "^1.6.0",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.13.0",
